News UAT/force-app/main/default/objects/Release_DO_NOT_USE__c/Release_DO_NOT_USE__c.object-meta.xml
<CustomObject>
    <description>Release Management</description>
    <label>Release</label>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases DO NOT USE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>