News UAT/force-app/main/default/objects/Release_DO_NOT_USE__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <description>Justification</description>
    <label>Justification</label>
    <type>TextArea</type>
</CustomField>