News UAT/force-app/main/default/objects/Release_DO_NOT_USE__c/fields/Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Date__c</fullName>
    <description>Release Date</description>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>