News UAT/force-app/main/default/objects/Release_DO_NOT_USE__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Scope</description>
    <label>Scope</label>
    <type>TextArea</type>
</CustomField>