News UAT/force-app/main/default/objects/Release_DO_NOT_USE__c/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <description>Target Date</description>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>