News UAT/force-app/main/default/objects/Release_DO_NOT_USE__c/fields/UAT_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>UAT_Start_Date__c</fullName>
    <inlineHelpText>This is the date when News will commence User Acceptance Testing for each release.</inlineHelpText>
    <label>UAT Start Date</label>
    <type>Date</type>
</CustomField>