News UAT/force-app/main/default/objects/Release_DO_NOT_USE__c/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <description>Urgency</description>
    <label>Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>