News UAT/force-app/main/default/objects/Release_DO_NOT_USE__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Target_Date__c</columns>
    <columns>Release_Date__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>